plugins {
    id 'java'
    id 'idea'
}

group 'edu.rowan.neg1'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.github.oshi:oshi-dist:3.10.0'
    compile 'org.slf4j:slf4j-nop:1.8.0-beta2'
}

task(run, type: JavaExec) {
    dependsOn classes
    dependsOn test

    main = 'controller.Driver'
    classpath = sourceSets.main.runtimeClasspath
}

task(runMain, type: JavaExec) {
    dependsOn classes

    main = 'controller.Driver'
    classpath = sourceSets.main.runtimeClasspath
}